# heatwave-2026

./: .gitignore  PLAN.md  README.md
.github/workflows/: deploy.yml
data/: SOURCES.md
data/interim/: cell_region.parquet
data/interim/era5/tn/: tn_1991-06.parquet  tn_1991-07.parquet  tn_1992-06.parquet  tn_1992-07.parquet  tn_1993-06.parquet  tn_1993-07.parquet  tn_1994-06.parquet  tn_1994-07.parquet  tn_1995-06.parquet  tn_1995-07.parquet  tn_1996-06.parquet  tn_1996-07.parquet  tn_1997-06.parquet  tn_1997-07.parquet  tn_1998-06.parquet  tn_1998-07.parquet  tn_1999-06.parquet  tn_1999-07.parquet  tn_2000-06.parquet  tn_2000-07.parquet  tn_2001-06.parquet  tn_2001-07.parquet  tn_2002-06.parquet  tn_2002-07.parquet  tn_2003-06.parquet  tn_2003-07.parquet  tn_2004-06.parquet  tn_2004-07.parquet  tn_2005-06.parquet  tn_2005-07.parquet  tn_2006-06.parquet  tn_2006-07.parquet  tn_2007-06.parquet  tn_2007-07.parquet  tn_2008-06.parquet  tn_2008-07.parquet  tn_2009-06.parquet  tn_2009-07.parquet  tn_2010-06.parquet  tn_2010-07.parquet  (+22 more)
pipeline/: 01_download.py  02_baseline.py  03_aggregate.sql  04_export.py  pyproject.toml  refresh.ps1  sanity_check.py
pipeline/tests/: test_download.py  test_outputs.py
site/: attributions.html  index.html
site/css/: style.css
site/data/: daily_anomaly.json  events.json  regions.geojson
site/data/cities/: amsterdam.json  berlin.json  bordeaux.json  brussels.json  budapest.json  london.json  madrid.json  milan.json  norwich.json  paris.json  vienna.json  zurich.json
site/js/: app.js  map.js  timeline.js
(+62 files in other folders)
